tests/grammar/schema/if_item/if_item_fail_0/stderr.golden
error[E2L23]: CompileError
  --> ${CWD}/main.k:13:35
   |
13 |     if data2["key3"] == "value3": "key4": "value4"
   |                                   ^ Cannot add member 'key4' to schema 'Data', did you mean '["key1", "key2", "key3"]'?
   |